# tsugi

./: .dockerignore  .gitignore  Containerfile  README.md  docker-compose.yml.example  pyproject.toml
app/: config.py  db.py  main.py
app/catalog/: franchise.py  normalize.py  rebuild.py  resolve.py  tags.py  trope_dict.py
app/crawler/: frontier.py  jobs.py  refresh.py
app/engine/: score.py  suggest.py
app/sources/: anilist.py  archive.py  base.py  dto.py  mangaupdates.py  ratelimit.py
app/web/: auth.py  covers.py  routes.py
app/web/static/: app.css  app.js
app/web/static/fonts/: fonts.css
app/web/templates/: base.html  index.html  library.html  work.html
app/web/templates/partials/: _banner.html  _cards.html  _crawler.html  _discard.html  _grid.html  _jobs_active.html  _picker.html  _reviews.html  _search.html  _settings.html  _stars.html  _tuning.html  _work.html
scripts/: capture_fixtures.py
tests/: conftest.py  factory.py  test_anilist.py  test_archive.py  test_auth.py  test_base.py  test_config.py  test_crawler.py  test_db.py  test_e2e.py  test_engine.py  test_live_smoke.py  test_mangaupdates.py  test_normalize.py  test_ratelimit.py  test_rebuild.py  test_refresh.py  test_resolve.py  test_suggest.py  test_tags.py  test_trope_dict.py  test_web.py
tests/fixtures/: anilist_media.json  anilist_search.json  anilist_tag_collection.json  mu_search.json  mu_series.json
