[project]
name = "tsugi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "authlib>=1.3",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "ruff>=0.8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["live: hits real APIs (deselected by default)"]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
